--- a/DevilDaggersAssetEditor.New/.editorconfig
+++ b/DevilDaggersAssetEditor.New/.editorconfig
@@ -270,6 +270,8 @@ dotnet_diagnostic.S3358.severity                                         = none
 
 # RoslynatorAnalyzers suppressions
 
+# RCS1090: Call 'ConfigureAwait(false)'.
 # RCS1123: Add parentheses when necessary.
 
+dotnet_diagnostic.RCS1090.severity                                       = none
 dotnet_diagnostic.RCS1123.severity                                       = none
