Use .NET 5.0 in .travis.yml script

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,6 @@ language: csharp
 mono: none
 
 script:
-- choco install dotnetcore-sdk
+- choco install dotnet-sdk --version=5.0.100
 - dotnet --version
 - dotnet restore
