--- a/DevilDaggersAssetEditor.Wpf/DevilDaggersAssetEditor.Wpf.csproj
+++ b/DevilDaggersAssetEditor.Wpf/DevilDaggersAssetEditor.Wpf.csproj
@@ -13,18 +13,18 @@
     <ProjectReference Include="..\DevilDaggersAssetEditor\DevilDaggersAssetEditor.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="DevilDaggersCore.Wpf" Version="1.3.12" />
+    <PackageReference Include="DevilDaggersCore.Wpf" Version="1.3.13" />
     <PackageReference Include="NoahStolk.SyntaxHighlighter" Version="1.0.0" />
-    <PackageReference Include="Ookii.Dialogs.Wpf.NETCore" Version="2.2.1" />
+    <PackageReference Include="Ookii.Dialogs.Wpf" Version="3.1.0" />
     <PackageReference Include="Roslynator.Analyzers" Version="3.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="SonarAnalyzer.CSharp" Version="8.14.0.22654">
+    <PackageReference Include="SonarAnalyzer.CSharp" Version="8.17.0.26580">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
+    <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.321">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
