--- a/DevilDaggersAssetEditor.Wpf/DevilDaggersAssetEditor.Wpf.csproj
+++ b/DevilDaggersAssetEditor.Wpf/DevilDaggersAssetEditor.Wpf.csproj
@@ -22,6 +22,7 @@
     <PackageReference Include="DevilDaggersCore.Wpf" Version="1.4.0" />
     <PackageReference Include="Extended.Wpf.Toolkit" Version="4.2.0" />
     <PackageReference Include="HtmlToXamlConverter" Version="1.0.5727.24510" />
+    <PackageReference Include="NAudio" Version="2.0.1" />
     <PackageReference Include="NoahStolk.SyntaxHighlighter" Version="1.0.0" />
     <PackageReference Include="Ookii.Dialogs.Wpf" Version="5.0.0" />
     <PackageReference Include="Roslynator.Analyzers" Version="3.3.0">
