--- a/DevilDaggersAssetEditor.Wpf/DevilDaggersAssetEditor.Wpf.csproj
+++ b/DevilDaggersAssetEditor.Wpf/DevilDaggersAssetEditor.Wpf.csproj
@@ -17,12 +17,12 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\DevilDaggersAssetEditor\DevilDaggersAssetEditor.csproj" />
-    <ProjectReference Include="..\OpenAlBindings\OpenAlBindings.csproj" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="DevilDaggersCore.Wpf" Version="1.4.0" />
     <PackageReference Include="Extended.Wpf.Toolkit" Version="4.2.0" />
     <PackageReference Include="HtmlToXamlConverter" Version="1.0.5727.24510" />
+    <PackageReference Include="NoahStolk.OpenAlBindings" Version="1.0.0" />
     <PackageReference Include="NoahStolk.SyntaxHighlighter" Version="1.0.0" />
     <PackageReference Include="Ookii.Dialogs.Wpf" Version="5.0.1" />
     <PackageReference Include="Roslynator.Analyzers" Version="3.3.0">
