--- a/DevilDaggersAssetEditor.Wpf/DevilDaggersAssetEditor.Wpf.csproj
+++ b/DevilDaggersAssetEditor.Wpf/DevilDaggersAssetEditor.Wpf.csproj
@@ -24,6 +24,7 @@
     <PackageReference Include="HtmlToXamlConverter" Version="1.0.5727.24510" />
     <PackageReference Include="NoahStolk.OpenAlBindings" Version="1.0.0" />
     <PackageReference Include="NoahStolk.SyntaxHighlighter" Version="1.0.0" />
+    <PackageReference Include="NoahStolk.WaveParser" Version="1.0.0" />
     <PackageReference Include="Ookii.Dialogs.Wpf" Version="5.0.1" />
     <PackageReference Include="Roslynator.Analyzers" Version="3.3.0">
       <PrivateAssets>all</PrivateAssets>
