Add build condition for ToolPublishMethod

--- a/DevilDaggersAssetEditor.Wpf/DevilDaggersAssetEditor.Wpf.csproj
+++ b/DevilDaggersAssetEditor.Wpf/DevilDaggersAssetEditor.Wpf.csproj
@@ -11,6 +11,7 @@
     <PublishSingleFile Condition="'$(Configuration)' == 'Release'">true</PublishSingleFile>
     <SelfContained>true</SelfContained>
     <RuntimeIdentifier>win-x64</RuntimeIdentifier>
+    <DefineConstants Condition="'$(PublishMethod)' != ''">$(DefineConstants);$(PublishMethod)</DefineConstants>
     <EnableCompressionInSingleFile>true</EnableCompressionInSingleFile>
     <IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
   </PropertyGroup>
